# devgraph-integrations

./: .commitlintrc.json  .devgraph.yaml  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  EXTENSIONS.md  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dco.yml  release.yml
devgraph_integrations/: __init__.py  cli.py
devgraph_integrations/config/: __init__.py  base.py  config.py  discovery.py  mcp.py
devgraph_integrations/config/sources/: __init__.py  base.py  file.py
devgraph_integrations/core/: base.py  discovery.py  entity.py  extension.py  file_parser.py  metadata.py  molecule.py  provider.py  registry.py  state.py  versioning.py
devgraph_integrations/mcpserver/: app.py  plugin.py  pluginmanager.py  resource_manager.py  server.py  tool_manager.py
devgraph_integrations/mcpserver/ipaddress/: server.py
devgraph_integrations/molecules/: README.md
devgraph_integrations/molecules/argo/: README.md  __init__.py  client.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/argo/types/: __init__.py  relations.py  v1_argo_app.py  v1_argo_instance.py  v1_argo_project.py
devgraph_integrations/molecules/base/: __init__.py  client.py  config.py  provider.py  reconciliation.py  utils.py
devgraph_integrations/molecules/docker/: README.md  __init__.py  client.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/docker/types/: __init__.py  relations.py  v1_docker_image.py  v1_docker_manifest.py  v1_docker_registry.py  v1_docker_repository.py
devgraph_integrations/molecules/file/: __init__.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/fossa/: README.md  __init__.py  config.py  mcp.py  molecule.py  provider.py
devgraph_integrations/molecules/fossa/types/: __init__.py  relations.py  v1_fossa_project.py
devgraph_integrations/molecules/github/: GITHUB_APP_SETUP.md  README.md  __init__.py  config.py  mcp.py  molecule.py  provider.py
devgraph_integrations/molecules/github/types/: relations.py  v1_github_hosting_service.py  v1_github_repository.py
devgraph_integrations/molecules/gitlab/: __init__.py  config.py  mcp.py  molecule.py  provider.py
devgraph_integrations/molecules/gitlab/types/: relations.py  v1_gitlab_hosting_service.py  v1_gitlab_project.py
devgraph_integrations/molecules/grafana/: __init__.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/grafana/types/: __init__.py  v1_grafana_dashboard.py  v1_grafana_datasource.py  v1_grafana_folder.py  v1_grafana_instance.py
devgraph_integrations/molecules/jira/: README.md  __init__.py  config.py  mcp.py
devgraph_integrations/molecules/jira/types/: __init__.py  relations.py  v1_jira_issue.py  v1_jira_project.py
devgraph_integrations/molecules/ldap/: README.md  __init__.py  client.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/ldap/types/: __init__.py  relations.py  v1_ldap_group.py  v1_ldap_org_unit.py  v1_ldap_user.py
devgraph_integrations/molecules/meta/: README.md  __init__.py  molecule.py  provider.py
devgraph_integrations/molecules/vercel/: README.md  __init__.py  client.py  config.py  molecule.py  provider.py
devgraph_integrations/molecules/vercel/types/: __init__.py  relations.py  v1_vercel_deployment.py  v1_vercel_project.py  v1_vercel_team.py
devgraph_integrations/types/: __init__.py  auth.py  entities.py
devgraph_integrations/types/meta/: __init__.py  relations.py  v1_people.py  v1_project.py
docs/: VERSIONING.md  creating-molecules.md
docs/molecules/: github.md
scripts/: README.md  bump-molecule-version.py  release.sh
tests/: README.md  __init__.py  conftest.py  framework.py  test_relation_ownership.py
tests/molecules/: __init__.py  test_argo.py  test_docker.py  test_file.py  test_fossa.py  test_github.py  test_gitlab.py
